# tablescraper

./: .gitignore  README.md  main.py  pyproject.toml  setup.cfg
tablescraper/: __init__.py  db.py  fetcher.py  gui.py  saver.py  worker.py
tests/: test_fetcher.py  test_saver.py
